--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-static-copy": "^2.2.0"
   },
   "dependencies": {
     "gh-pages": "^6.3.0"
